--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <header>
   <a onclick="showSection('home')">
-  <img src="images/logo.jpg" alt="Logo" class="logo-header">
+  <img src="logo.jpg" alt="Logo" class="logo-header">
   </a>
   <nav>
     <a onclick="showSection('accommodation')">Accommodation</a>
